--- a/index.html
+++ b/index.html
@@ -1,152 +1,274 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Dean's List</title>
-  <!-- Include Tailwind CSS via CDN -->
-  <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
-  <!-- Header -->
-  <header class="bg-gray-800 text-white py-6 shadow-md">
-    <div class="container mx-auto flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6">
-      <span class="font-semibold">Support me:</span>
-      <!-- Custom Patreon Button -->
-      <a href="https://patreon.com/user?u=102886" target="_blank"
-         class="inline-block px-6 py-2 bg-[#f96854] text-white font-semibold rounded-md shadow-md transition-all hover:bg-[#f7433d]">
-        Support me on Patreon
-      </a>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dean's List</title>
+    <!-- Include Tailwind CSS via CDN -->
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
+    <!-- Header -->
+    <header class="bg-gray-800 text-white py-6 shadow-md">
+      <div
+        class="container mx-auto flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6"
+      >
+        <span class="font-semibold">Support me:</span>
+        <!-- Custom Patreon Button -->
+        <a
+          href="https://patreon.com/user?u=102886"
+          target="_blank"
+          class="inline-block px-6 py-2 bg-[#f96854] text-white font-semibold rounded-md shadow-md transition-all hover:bg-[#f7433d]"
+        >
+          Support me on Patreon
+        </a>
+      </div>
+    </header>
 
-  <!-- Main Content -->
-  <main class="flex-1 container mx-auto px-4 py-8">
-    <h1 class="text-4xl font-bold text-center mb-8 text-gray-900">Welcome to Dean's List</h1>
+    <!-- Main Content -->
+    <main class="flex-1 container mx-auto px-4 py-8">
+      <h1 class="text-4xl font-bold text-center mb-8 text-gray-900">
+        Welcome to Dean's List
+      </h1>
 
-    <!-- Bubble Cloud Container -->
-    <div class="max-w-3xl mx-auto">
-      <!-- Create a grid or flex region for the floating bubbles -->
-      <div class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 justify-items-center">
-        <!-- Creative Chaos -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Creative Chaos">
-            Creative Chaos
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+      <!-- Bubble Cloud Container -->
+      <div class="max-w-3xl mx-auto">
+        <!-- Create a grid or flex region for the floating bubbles -->
+        <div
+          class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 justify-items-center"
+        >
+          <!-- Creative Chaos -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Creative Chaos"
+            >
+              <i class="fas fa-paint-brush mr-2"></i> Creative Chaos
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Creative Chaos</h3>
+            </div>
+          </div>
 
-        <!-- Programming & Game Dev -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Programming & Game Dev">
-            Programming & Game Dev
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Programming & Game Dev -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Programming & Game Dev"
+            >
+              <i class="fas fa-code mr-2"></i> Programming & Game Dev
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Programming & Game Dev</h3>
+            </div>
+          </div>
 
-        <!-- Finance & Life Advice -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Finance & Life Advice">
-            Finance & Life Advice
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Finance & Life Advice -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Finance & Life Advice"
+            >
+              <i class="fas fa-piggy-bank mr-2"></i> Finance & Life Advice
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Finance & Life Advice</h3>
+            </div>
+          </div>
 
-        <!-- Comedy & Trolls -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Comedy & Trolls">
-            Comedy & Trolls
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Comedy & Trolls -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Comedy & Trolls"
+            >
+              <i class="fas fa-face-grin-squint mr-2"></i> Comedy & Trolls
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Comedy & Trolls</h3>
+            </div>
+          </div>
 
-        <!-- Educational & Interesting -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Educational & Interesting">
-            Educational & Interesting
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Educational & Interesting -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Educational & Interesting"
+            >
+              <i class="fas fa-graduation-cap mr-2"></i> Educational &
+              Interesting
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Educational & Interesting</h3>
+            </div>
+          </div>
 
-        <!-- Gaming Legends -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Gaming Legends">
-            Gaming Legends
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Gaming Legends -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Gaming Legends"
+            >
+              <i class="fas fa-gamepad mr-2"></i> Gaming Legends
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Gaming Legends</h3>
+            </div>
+          </div>
 
-        <!-- AI & Technology -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="AI & Technology">
-            AI & Technology
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- AI & Technology -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="AI & Technology"
+            >
+              <i class="fas fa-robot mr-2"></i> AI & Technology
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">AI & Technology</h3>
+            </div>
+          </div>
 
-        <!-- Don't Try This at Home -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Don't Try This at Home">
-            Don't Try This at Home
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Don't Try This at Home -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Don't Try This at Home"
+            >
+              <i class="fas fa-exclamation-triangle mr-2"></i> Don't Try This at
+              Home
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Don't Try This at Home</h3>
+            </div>
+          </div>
 
-        <!-- Gone but Not Forgotten -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Gone but Not Forgotten">
-            Gone but Not Forgotten
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Gone but Not Forgotten -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Gone but Not Forgotten"
+            >
+              <i class="fas fa-history mr-2"></i> Gone but Not Forgotten
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Gone but Not Forgotten</h3>
+            </div>
+          </div>
 
-        <!-- Wildlife & Nature -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Wildlife & Nature">
-            Wildlife & Nature
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Wildlife & Nature -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Wildlife & Nature"
+            >
+              <i class="fas fa-tree mr-2"></i> Wildlife & Nature
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Wildlife & Nature</h3>
+            </div>
+          </div>
 
-        <!-- Brain Vacation -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Brain Vacation">
-            Brain Vacation
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
-        </div>
+          <!-- Brain Vacation -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Brain Vacation"
+            >
+              <i class="fas fa-user-astronaut mr-2"></i> Brain Vacation
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Brain Vacation</h3>
+            </div>
+          </div>
 
-        <!-- Pictures on the Video Site -->
-        <div class="category-container w-full md:w-auto">
-          <a href="#" class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105" data-category="Pictures on the Video Site">
-            Pictures on the Video Site
-          </a>
-          <div class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"></div>
+          <!-- Pictures on the Video Site -->
+          <div class="category-container w-full md:w-auto">
+            <a
+              href="#"
+              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
+              data-category="Pictures on the Video Site"
+            >
+              <i class="fas fa-image mr-2"></i> Pictures on the Video Site
+            </a>
+            <div
+              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
+            >
+              <h3 class="font-semibold mb-2">Pictures on the Video Site</h3>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </main>
+    </main>
 
-  <!-- Footer -->
-  <footer class="bg-gray-800 text-gray-300 py-4 shadow-inner">
-    <div class="container mx-auto text-center">
-      <p>&copy; 2025 Dean's List. All rights reserved.</p>
-      <p>Hosted on <a href="https://pages.github.com/" target="_blank" class="text-blue-400 hover:underline">GitHub Pages</a>.</p>
-    </div>
-    <!-- Empty space for Ko-Fi widget -->
-    <div class="h-20"></div>
-  </footer>
+    <!-- Footer -->
+    <footer class="bg-gray-800 text-gray-300 py-4 shadow-inner">
+      <div class="container mx-auto text-center">
+        <p>&copy; 2025 Dean's List. All rights reserved.</p>
+        <p>
+          Hosted on
+          <a
+            href="https://pages.github.com/"
+            target="_blank"
+            class="text-blue-400 hover:underline"
+            >GitHub Pages</a
+          >.
+        </p>
+      </div>
+      <!-- Empty space for Ko-Fi widget -->
+      <div class="h-20"></div>
+    </footer>
 
-  <!-- Scripts -->
-  <script src="script.js"></script>
-  <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-  <script>
-    kofiWidgetOverlay.draw('deanslist', {
-      'type': 'floating-chat',
-      'floating-chat.donateButton.text': 'Support me',
-      'floating-chat.donateButton.background-color': '#00b9fe',
-      'floating-chat.donateButton.text-color': '#fff'
-    });
-  </script>
-</body>
+    <!-- Scripts -->
+    <script src="script.js"></script>
+    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
+    <script>
+      kofiWidgetOverlay.draw("deanslist", {
+        type: "floating-chat",
+        "floating-chat.donateButton.text": "Support me",
+        "floating-chat.donateButton.background-color": "#00b9fe",
+        "floating-chat.donateButton.text-color": "#fff",
+      });
+    </script>
+  </body>
 </html>
