--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dean's List</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Dean's List - Tag System</title>
     <!-- Include Tailwind CSS via CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome for icons (optional) -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -14,18 +18,15 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="flex flex-col min-h-screen bg-gray-50 text-gray-800">
+  <body class="bg-gray-50 text-gray-800">
     <!-- Header -->
     <header class="bg-gray-800 text-white py-6 shadow-md">
-      <div
-        class="container mx-auto flex flex-col sm:flex-row items-center justify-center space-y-4 sm:space-y-0 sm:space-x-6"
-      >
-        <span class="font-semibold">Support me:</span>
-        <!-- Custom Patreon Button -->
+      <div class="container mx-auto flex flex-col sm:flex-row items-center justify-between px-4">
+        <h1 class="text-2xl font-bold">Dean's List</h1>
         <a
           href="https://patreon.com/user?u=102886"
           target="_blank"
-          class="inline-block px-6 py-2 bg-[#f96854] text-white font-semibold rounded-md shadow-md transition-all hover:bg-[#f7433d]"
+          class="px-6 py-2 bg-[#f96854] text-white font-semibold rounded-md shadow-md transition-all hover:bg-[#f7433d]"
         >
           Support me on Patreon
         </a>
@@ -33,212 +34,94 @@
     </header>
 
     <!-- Main Content -->
-    <main class="flex-1 container mx-auto px-4 py-8">
-      <h1 class="text-4xl font-bold text-center mb-8 text-gray-900">
-        Welcome to Dean's List
-      </h1>
+    <main class="container mx-auto p-4">
+      <!-- Tag Filter Panel -->
+      <section id="tag-filters" class="flex flex-wrap gap-2 mb-8">
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Creative Chaos">
+          Creative Chaos
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Art">
+          Art
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Music">
+          Music
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Engineering">
+          Engineering
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Programming">
+          Programming
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Game Dev">
+          Game Dev
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Tutorial">
+          Tutorial
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Education">
+          Education
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Finance">
+          Finance
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Life Advice">
+          Life Advice
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Comedy">
+          Comedy
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Trolls">
+          Trolls
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Gaming">
+          Gaming
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Educational">
+          Educational
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Interesting">
+          Interesting
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Mathematics">
+          Mathematics
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Travel">
+          Travel
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Sketch">
+          Sketch
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Don't Try This">
+          Don't Try This
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Experimental">
+          Experimental
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="DIY">
+          DIY
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Legacy">
+          Legacy
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Wildlife">
+          Wildlife
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Nature">
+          Nature
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Adventure">
+          Adventure
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Pictures">
+          Pictures
+        </button>
+        <button class="tag-btn bg-blue-500 text-white px-4 py-2 rounded" data-tag="Visual">
+          Visual
+        </button>
+      </section>
 
-      <!-- Bubble Cloud Container -->
-      <div class="max-w-3xl mx-auto">
-        <!-- Create a grid or flex region for the floating bubbles -->
-        <div
-          class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4 justify-items-center"
-        >
-          <!-- Creative Chaos -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Creative Chaos"
-            >
-              <i class="fas fa-paint-brush mr-2"></i> Creative Chaos
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Creative Chaos</h3>
-            </div>
-          </div>
-
-          <!-- Programming & Game Dev -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Programming & Game Dev"
-            >
-              <i class="fas fa-code mr-2"></i> Programming & Game Dev
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Programming & Game Dev</h3>
-            </div>
-          </div>
-
-          <!-- Finance & Life Advice -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Finance & Life Advice"
-            >
-              <i class="fas fa-piggy-bank mr-2"></i> Finance & Life Advice
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Finance & Life Advice</h3>
-            </div>
-          </div>
-
-          <!-- Comedy & Trolls -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Comedy & Trolls"
-            >
-              <i class="fas fa-face-grin-squint mr-2"></i> Comedy & Trolls
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Comedy & Trolls</h3>
-            </div>
-          </div>
-
-          <!-- Educational & Interesting -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Educational & Interesting"
-            >
-              <i class="fas fa-graduation-cap mr-2"></i> Educational &
-              Interesting
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Educational & Interesting</h3>
-            </div>
-          </div>
-
-          <!-- Gaming Legends -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Gaming Legends"
-            >
-              <i class="fas fa-gamepad mr-2"></i> Gaming Legends
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Gaming Legends</h3>
-            </div>
-          </div>
-
-          <!-- AI & Technology -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="AI & Technology"
-            >
-              <i class="fas fa-robot mr-2"></i> AI & Technology
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">AI & Technology</h3>
-            </div>
-          </div>
-
-          <!-- Don't Try This at Home -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Don't Try This at Home"
-            >
-              <i class="fas fa-exclamation-triangle mr-2"></i> Don't Try This at
-              Home
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Don't Try This at Home</h3>
-            </div>
-          </div>
-
-          <!-- Gone but Not Forgotten -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Gone but Not Forgotten"
-            >
-              <i class="fas fa-history mr-2"></i> Gone but Not Forgotten
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Gone but Not Forgotten</h3>
-            </div>
-          </div>
-
-          <!-- Wildlife & Nature -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Wildlife & Nature"
-            >
-              <i class="fas fa-tree mr-2"></i> Wildlife & Nature
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Wildlife & Nature</h3>
-            </div>
-          </div>
-
-          <!-- Brain Vacation -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Brain Vacation"
-            >
-              <i class="fas fa-user-astronaut mr-2"></i> Brain Vacation
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Brain Vacation</h3>
-            </div>
-          </div>
-
-          <!-- Pictures on the Video Site -->
-          <div class="category-container w-full md:w-auto">
-            <a
-              href="#"
-              class="interest-bubble block px-6 py-3 bg-blue-500 text-white rounded-full shadow-md transform transition duration-300 hover:bg-blue-600 hover:scale-105 hover:shadow-lg"
-              data-category="Pictures on the Video Site"
-            >
-              <i class="fas fa-image mr-2"></i> Pictures on the Video Site
-            </a>
-            <div
-              class="category-inline-content hidden mt-4 p-4 border border-gray-200 rounded-lg"
-            >
-              <h3 class="font-semibold mb-2">Pictures on the Video Site</h3>
-            </div>
-          </div>
-        </div>
-      </div>
+      <!-- Channels Display Area -->
+      <section id="channels" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4"></section>
     </main>
 
     <!-- Footer -->
@@ -247,28 +130,14 @@
         <p>&copy; 2025 Dean's List. All rights reserved.</p>
         <p>
           Hosted on
-          <a
-            href="https://pages.github.com/"
-            target="_blank"
-            class="text-blue-400 hover:underline"
-            >GitHub Pages</a
-          >.
+          <a class="text-blue-400 hover:underline" href="https://pages.github.com/" target="_blank">
+            GitHub Pages
+          </a>.
         </p>
       </div>
-      <!-- Empty space for Ko-Fi widget -->
-      <div class="h-20"></div>
     </footer>
 
     <!-- Scripts -->
     <script src="script.js"></script>
-    <script src="https://storage.ko-fi.com/cdn/scripts/overlay-widget.js"></script>
-    <script>
-      kofiWidgetOverlay.draw("deanslist", {
-        type: "floating-chat",
-        "floating-chat.donateButton.text": "Support me",
-        "floating-chat.donateButton.background-color": "#00b9fe",
-        "floating-chat.donateButton.text-color": "#fff",
-      });
-    </script>
   </body>
 </html>
